--- a/source/feed.html
+++ b/source/feed.html
@@ -29,7 +29,7 @@
             <div class="wrapper">
                 <nav class="header-nav">
                     <a class="header-nav-item header-nav-item--selected" href="/">
-                        <img src="static/images/home.svg" alt="Twitter Logo">
+                        <img src="static/images/home.png" alt="Twitter Logo">
                         Home
                     </a>
                 </nav>
