--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
             <div class="wrapper">
                 <nav class="header-nav">
                     <a class="header-nav-item" href="/">
-                        <img src="static/images/twitter.svg" alt="Twitter Logo">
+                        <img src="static/images/twitter.png" alt="Twitter Logo">
                         Home
                     </a>
                 </nav>
