add gulpfile for building project assets

--- a/source/feed.html
+++ b/source/feed.html
@@ -7,6 +7,7 @@
         <title>Twitter Clone</title>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600">
+        <!-- build:css static/stylesheets/feed.css -->
         <link rel="stylesheet" href="static/stylesheets/abstracts/variables.css">
         <link rel="stylesheet" href="static/stylesheets/base/reset.css">
         <link rel="stylesheet" href="static/stylesheets/base/base.css">
@@ -22,6 +23,7 @@
         <link rel="stylesheet" href="static/stylesheets/layout/header.css">
         <link rel="stylesheet" href="static/stylesheets/layout/page.css">
         <link rel="stylesheet" href="static/stylesheets/pages/feed.css">
+        <!-- endbuild -->
     </head>
 
     <body>
@@ -126,7 +128,9 @@
             </aside>
         </div>
 
+        <!-- build:js static/javascripts/feed.js -->
         <script src="static/javascripts/base/utilities.js"></script>
         <script src="static/javascripts/components/dropdowns.js"></script>
+        <!-- endbuild -->
     </body>
 </html>
