--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
         <title>Twitter Clone. It's what's happening.</title>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600">
+        <!-- build:css static/stylesheets/index.css -->
         <link rel="stylesheet" href="static/stylesheets/abstracts/variables.css">
         <link rel="stylesheet" href="static/stylesheets/base/reset.css">
         <link rel="stylesheet" href="static/stylesheets/base/base.css">
@@ -17,6 +18,7 @@
         <link rel="stylesheet" href="static/stylesheets/components/menus.css">
         <link rel="stylesheet" href="static/stylesheets/layout/header.css">
         <link rel="stylesheet" href="static/stylesheets/pages/landing.css">
+        <!-- endbuild -->
     </head>
 
     <body>
